validate: 2026-02-21-ansible-playbook-environment-variables